添加模块代码